# ccm-tool

./: .gitignore  ENHANCEMENT_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SETUP_COMPLETE.md  ccm_tool.py  gui_app.py  install.bat  install.py  main.py  pyproject.toml  requirements.txt  setup.py  setup_uv.bat  setup_uv.py  setup_uv.sh  test_final.py  test_gui.py  test_gui_launch.py  test_installation.py  test_integration.py  test_simple.py  test_structure.py  validate_setup.py
config/: keysets.yaml  settings.yaml
data/: smartcard_tool.db
examples/: advanced_example.py  basic_example.py  visualization_demo.py
src/: __init__.py  config_manager.py  database_manager.py  globalplatform.py  ota_manager.py  secure_channel.py  smartcard_manager.py  visualization.py
tests/: test_main.py
